# copier-everything

./: .cz.toml  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  REUSE.toml  REVIEW.md  copier.yml  mkdocs.yml  pyproject.toml
.claude/agents/: template-render-reviewer.md
.claude/hooks/: _hooklib.py  guard_managed_files.py  guard_version_bumps.py
.config/: licenserc.toml  lychee.toml  release-please-config.json  typos.toml
.github/: renovate.json5
.github/actions/install-hawkeye/: action.yml
.github/actions/install-taplo/: action.yml
.github/workflows/: approve-bot-prs.yml  ci.yml  dependabot-auto-merge.yml  docs.yml  link-check.yml  main.yml  pr.yml  refresh-binary-checksums.yml  release-please.yml
.serena/: project.yml
docs/: adopting-into-an-existing-repo.md  app.js  baseline.html  baseline.md  design.html  design.md  index.html  index.md  modules.html  modules.md  questions.html  questions.md  search-index.js  search-index.json  style.css  usage.html  usage.md
docs/includes/: install.md
docs/stylesheets/: extra.css
scripts/: bootstrap-github.sh  generate-search-index.py  refresh-binary-checksums.sh  resync_twins.py
template/: .copier-answers.yml.jinja  .cz.toml.jinja  .editorconfig.jinja  .gitignore.jinja  .pre-commit-config.yaml.jinja  .rumdl.toml.jinja  AGENTS.md.jinja  CHANGELOG.md.jinja  CONTRIBUTING.md.jinja  LICENSE.jinja  README.md.jinja  REUSE.toml.jinja  SECURITY.md.jinja  licenserc.toml.jinja  pyproject.toml.jinja  {% if has_ansible %}ansible.cfg{% endif %}.jinja  {% if has_ansible %}requirements.yml{% endif %}.jinja  {% if has_ansible and ansible_kind == 'collection' %}galaxy.yml{% endif %}.jinja  {% if has_python %}.envrc{% endif %}.jinja  {% if has_python %}pyproject.toml{% endif %}.jinja  {% if include_docker %}.dockerignore{% endif %}.jinja  {% if include_docker %}Dockerfile{% endif %}.jinja  {% if include_docker %}compose.yaml{% endif %}.jinja  {% if include_docs_site %}mkdocs.yml{% endif %}.jinja
template/.claude/hooks/: _hooklib.py  guard_config_drift.py  guard_version_bumps.py
template/.config/: .release-please-manifest.json.jinja  licenserc.toml.jinja  lychee.toml.jinja  release-please-config.json.jinja  rumdl.toml.jinja  typos.toml.jinja  yamllint.yaml.jinja  {% if has_ansible %}ansible-lint.yml{% endif %}.jinja
template/.github/: CODEOWNERS.jinja  PULL_REQUEST_TEMPLATE.md.jinja  renovate.json
template/.github/ISSUE_TEMPLATE/: bug_report.yml.jinja  feature_request.yml.jinja
template/.github/workflows/: approve-bot-prs.yml.jinja  ci.yml.jinja  dependabot-auto-merge.yml.jinja  label-hygiene.yml.jinja  link-check.yml.jinja  main.yml.jinja  pr.yml.jinja  refresh-binary-checksums.yml.jinja  {% if include_docs_site %}docs.yml{% endif %}.jinja  {% if publish_to_galaxy %}publish-galaxy.yml{% endif %}.jinja  {% if publish_to_pypi %}publish.yml{% endif %}.jinja
template/scripts/: check_copier_src_path.py.jinja  refresh-binary-checksums.sh.jinja
template/{% if 'bats' in test_frameworks %}tests{% endif %}/: smoke.bats.jinja
template/{% if 'pytest' in test_frameworks %}tests{% endif %}/: test_smoke.py.jinja
template/{% if 'pytest' in test_frameworks and not python_source %}tests{% endif %}/: conftest.py.jinja
template/{% if ansible_role_based %}molecule{% endif %}/default/: converge.yml.jinja  molecule.yml.jinja  requirements.yml.jinja  verify.yml.jinja
template/{% if has_ansible and ansible_kind == 'collection' %}meta{% endif %}/: runtime.yml.jinja
template/{% if has_ansible and ansible_kind == 'playbooks' %}inventory{% endif %}/: hosts.yml.jinja
template/{% if has_ansible and ansible_kind == 'playbooks' %}inventory{% endif %}/group_vars/: all.yml.jinja
template/{% if has_ansible and ansible_kind == 'playbooks' %}playbooks{% endif %}/: site.yml.jinja
template/{% if has_ansible and ansible_kind == 'role' %}defaults{% endif %}/: main.yml.jinja
template/{% if has_ansible and ansible_kind == 'role' %}handlers{% endif %}/: main.yml.jinja
template/{% if has_ansible and ansible_kind == 'role' %}meta{% endif %}/: argument_specs.yml.jinja  main.yml.jinja
template/{% if has_ansible and ansible_kind == 'role' %}tasks{% endif %}/: main.yml.jinja
template/{% if include_devcontainer %}.devcontainer{% endif %}/: devcontainer.json.jinja
template/{% if include_docs_site %}docs{% endif %}/: index.md.jinja
template/{% if include_docs_site %}overrides{% endif %}/: 404.html.jinja
template/{% if include_python %}tests{% endif %}/: test_smoke.py.jinja
template/{% if include_sql %}sql{% endif %}/: README.md.jinja
template/{% if include_terraform %}terraform{% endif %}/: README.md.jinja  main.tf.jinja  outputs.tf.jinja  variables.tf.jinja  versions.tf.jinja
tests/: conftest.py  hook_harness.py  render-matrix.sh  render_support.py  test_ansible_config.py  test_ansible_galaxy_publish.py  test_answer_fixtures.py  test_approve_bot_prs.py  test_author_identity_question.py  test_check_copier_src_path.py  test_ci_and_issue_forms.py  test_copier_update_e2e.py  test_copier_update_seeds.py  test_copier_validators.py  test_dependabot_auto_merge.py  test_docs_site.py  test_generate_search_index.py  test_generated_project_state.py  test_guard_config_drift.py  test_guard_managed_files.py  test_guard_version_bumps.py  test_helm_chart.py  test_label_hygiene.py  test_link_check_excludes.py  test_main_release_guard.py  test_pypi_upload_guard.py  test_pyproject_schema.py  test_refresh_binary_checksums.py  test_release_model.py  test_release_pr_defuse.py  test_render_leaks.py  test_render_module.py  test_renovate_config.py  test_syncd_files.py  test_synced_files.py  test_year_question.py  update_support.py
tests/answers/: ansible-collection.yml  ansible-playbooks.yml  ansible-role.yml  apache-pkg.yml  app-pytest-bats.yml  app-pytest.yml  docker-shell.yml  full-modules.yml  helm.yml  multi-package.yml  no-docs-site.yml  pkg-unpublished.yml  pkg.yml  shell-bats.yml  spine-frontmatter.yml  spine-only.yml  sql-dbt.yml  sql.yml  terraform.yml
(+14 files in other folders)
