# SPDX-FileCopyrightText: © 2026 Tyler Nivin
# SPDX-License-Identifier: MIT

# copier-everything's OWN dev env — not an installable package. This pyproject hosts the
# Python tooling config (ruff, ty, pytest) for the template repo's test suite (tests/) and
# gives uv a managed dev env. `[tool.uv] package = false` keeps uv from trying to build the
# repo. Run: uv run <tool>. Generated projects get their own pyproject (see
# `template/{% if has_python %}pyproject.toml{% endif %}.jinja`); this file is kept in sync
# with that render by tests/test_synced_files.py.
[project]
name = "copier-everything"
version = "0.0.0"
requires-python = ">=3.14"
description = "Copier template for opinionated, multi-language project scaffolding."
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[dependency-groups]
# Test deps for the template's own suite: copier renders the template in the tests, pyjson5
# parses the json5/.vscode configs and pyyaml the workflow YAML in the sync tests. ruff/ty/pytest
# mirror what a generated project gets. (pyyaml is declared directly — not leaned on transitively
# via copier — so the suite's needs don't break if copier's deps change.)
dev = [
  "copier>=9.11.0",
  "pyjson5>=2.0.0",
  "pytest>=8",
  "pyyaml>=6",
  "ruff>=0.12",
  # ty is pre-1.0 and evolves quickly, so ">=0.0.1" is a permissive floor, not a meaningful one
  # — Renovate keeps the resolved version current regardless.
  "ty>=0.0.1",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py314"
line-length = 100
# The Claude Code guard hooks ship VERBATIM to generated projects, so they're not this repo's
# own code to lint/format (and a future ruff rule mustn't redden a consumer's CI over shipped
# code). The `**/.claude/hooks` glob matches at any depth, so one identical pattern covers a
# generated project's `.claude/hooks` AND this dogfood repo's own template/.claude/hooks payload
# copies — no `template/` entry (which a generated project could wrongly apply to a real one).
extend-exclude = ["**/.claude/hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["D203", "D212", "D401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"scripts/**" = ["T201"] # CLI scripts print their output to the user
"tests/**" = ["S101", "INP001"] # tests use assert; not an importable package
