# SPDX-FileCopyrightText: © 2026 Tyler Nivin
# SPDX-License-Identifier: MIT

# copier-everything's OWN dev env — not an installable package. This pyproject hosts the
# Python tooling config (ruff, ty, pytest) for the template repo's test suite (tests/) and
# gives uv a managed dev env. `[tool.uv] package = false` keeps uv from trying to build the
# repo. Run: uv run <tool>. Generated projects get their own pyproject (see
# `template/{% if has_python %}pyproject.toml{% endif %}.jinja`); this file is kept in sync
# with that render by tests/test_synced_files.py.
[project]
name = "copier-everything"
version = "0.0.0"
requires-python = ">=3.14"
description = "Copier template for opinionated, multi-language project scaffolding."
authors = [{ name = "Tyler Nivin", email = "tyler@nivin.tech" }]
license = "MIT"
license-files = ["LICENSE", "LICENSES/*"]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = []

[dependency-groups]
# Test deps for the template's own suite: copier renders the template in the tests, pyjson5
# parses the json5/.vscode configs and pyyaml the workflow YAML in the sync tests. ruff/ty/pytest
# mirror what a generated project gets. (pyyaml is declared directly — not leaned on transitively
# via copier — so the suite's needs don't break if copier's deps change.) pytest-xdist
# parallelizes the render-heavy suite; pytest-cov aggregates coverage across its workers;
# validate-pyproject validates the rendered pyproject offline (tests/test_pyproject_schema.py).
dev = [
  "copier>=9.11.0",
  "pyjson5>=2.0.0",
  "pytest>=8",
  "pytest-cov>=7.1.0",
  "pytest-xdist>=3.8.0",
  "pyyaml>=6",
  "ruff>=0.12",
  # ty is pre-1.0 and evolves quickly, so ">=0.0.1" is a permissive floor, not a meaningful one
  # — Renovate keeps the resolved version current regardless.
  "ty>=0.0.1",
  "validate-pyproject>=0.25",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
# The suite is render-heavy and embarrassingly parallel — each render writes its own tmp dir —
# so run it under pytest-xdist. --dist=loadscope keeps a module's tests on one worker (they share
# module-scoped render fixtures); --maxprocesses bounds the fan-out on big machines. Coverage
# aggregates correctly across the workers via [tool.coverage.run] below; pass --cov (and
# --junit-xml=<path> for JUnit) on the CI invocation, kept out of the default addopts so local
# runs stay fast and litter-free.
addopts = "-n=auto --dist=loadscope --maxprocesses=8"

[tool.coverage.run]
# xdist workers each write a separate coverage data file that `coverage combine` merges, so a
# `--cov` run aggregates correctly across the parallel workers rather than reporting one worker's
# slice. Measure this repo's own Python (the test suite + helper scripts).
parallel = true
concurrency = ["multiprocessing"]
source = ["tests", "scripts"]

[tool.ruff]
target-version = "py314"
line-length = 100
# The Claude Code guard hooks ship VERBATIM to generated projects, so they're not this repo's
# own code to lint/format (and a future ruff rule mustn't redden a consumer's CI over shipped
# code). The `**/.claude/hooks` glob matches at any depth, so one identical pattern covers a
# generated project's `.claude/hooks` AND this dogfood repo's own template/.claude/hooks payload
# copies — no `template/` entry (which a generated project could wrongly apply to a real one).
extend-exclude = ["**/.claude/hooks"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["D203", "D212", "D401", "COM812", "ISC001"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# CLI scripts print their output to the user.
"scripts/**" = ["T201"]
# Tests use assert; the dir isn't an importable package.
"tests/**" = ["S101", "INP001"]
